# -WhatsApp-Automation-Tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README.txt  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-ghcr.yml
config/: config.yaml  settings.py
data/: one_lead.csv  sample_leads.csv
src/: __init__.py  logger_config.py  message_templates.py  phone_validator.py  whatsapp_automation.py
templates/: messages.yaml
templates/ar/accounting/: messages.yaml
templates/ar/it/: messages.yaml
templates/ar/life/: messages.yaml
templates/ar/work/: messages.yaml
templates/en/accounting/: messages.yaml
templates/en/it/: messages.yaml
templates/en/life/: messages.yaml
templates/en/work/: messages.yaml
templates/fr/accounting/: messages.yaml
templates/fr/it/: messages.yaml
templates/fr/life/: messages.yaml
templates/fr/work/: messages.yaml
templates/tn/accounting/: messages.yaml
templates/tn/it/: messages.yaml
templates/tn/life/: messages.yaml
templates/tn/work/: messages.yaml
tests/: __init__.py  conftest.py  test_message_templates.py  test_phone_validator.py
web_ui/: app.py  requirements.txt  simple_test.py  test_app.py
web_ui/templates/: base.html  index.html  vnc_view.html
